--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 /*! Шапка */
 
 .header {
-    padding: 25px 0;
+    padding: 0 0 25px 0;
 }
 
 .header .container {
@@ -156,42 +156,89 @@ h1, h2, h3, h4, h5, h6 {
     gap: 40px 10px;
 }
 
-.food-list__card {
-    width: 260px;
-
-    background-color: #312f30;
-    border-radius: 10px;
-    overflow: hidden;
-
-    text-align: center;
-    transition: 0.5s;
+.food-list__card-wrapper {
+    perspective: 1000px;
 }
 
-.food-list__card:hover {
-    transform: translate(-6px, -10px)
+.food-list__card-flip {
+    width: 260px;
+    height: 312px;
+    position: relative;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.food-list__card-wrapper:hover .food-list__card-flip {
+    transform: rotateY(180deg);
+}
+
+.food-list__card--front,
+.food-list__card--back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    backface-visibility: hidden;
+    top: 0;
+    left: 0;
+}
+
+.food-list__card--front {
+    border-radius: 10px;
+    background-color: #312f30;
+    text-align: center;
+    transition: 0.5s;
 }
 
 .food-list__images {
     width: 100%;
     height: 175px;
     object-fit: cover;
-}
-
-.food-list__title {
-    margin-bottom: 13px;
-
-    font-size: 20px;
+    border: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .food-list__text-wrappeer {
     padding: 30px 20px;
-    ;
+}
+
+.food-list__title {
+    margin-bottom: 13px;
+    font-size: 20px;
+    color: #fff;
 }
 
 .food-list__desc {
     font-size: 16px;
     opacity: 0.7;
+    color: #fff;
 }
+
+.food-list__card--back {
+    transform: rotateY(180deg);
+    background-color: #444;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.food-list__back-content {
+    text-align: left;
+}
+
+.food-list__ingredients {
+    list-style: disc;
+    padding-left: 20px;
+    margin-bottom: 15px;
+}
+
+.food-list__back-note {
+    font-size: 14px;
+    opacity: 0.8;
+}
+
 
 /*! Order */
 .order {
@@ -339,6 +386,79 @@ h1, h2, h3, h4, h5, h6 {
 
     max-width: 880px;
 }
+
+.feedback__rad-big {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 366px;
+    height: 366px;
+    border: 1px solid #f6762c;
+    border-radius: 50%;
+}
+
+.orbit {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    inset: 0;
+    animation: orbit 20s linear infinite;
+}
+
+@keyframes orbit {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.feedback__img {
+    position: absolute;
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    object-fit: contain;
+}
+
+.feedback__img:nth-child(1) {
+    transform: rotate(0deg) translate(180px);
+}
+
+.feedback__img:nth-child(2) {
+    transform: rotate(90deg) translate(180px);
+}
+
+.feedback__img:nth-child(3) {
+    transform: rotate(180deg) translate(180px);
+}
+
+.feedback__img:nth-child(4) {
+    transform: rotate(270deg) translate(180px);
+}
+
+
+.feedback__rad-min {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    border: 1px solid #f6762c;
+    border-radius: 50%;
+}
+
+.feedback__img-big {
+    width: 300px;
+    height: 300px;
+    object-fit: contain;
+}
+
 
 .feedback__text {
     width: 370px;
